--- a/style.css
+++ b/style.css
@@ -15,13 +15,9 @@ header {
     font-size:200%;
     z-index: 1;
 }
-.nakano{
-    position:fixed;
-    text-align:right;
-}
 .main{
     display:inline-block;
-    padding:160px 0 0 0;
+    padding-top:160px;
     color:#fff;
     height:70vh;
     font-size:100%;
@@ -39,15 +35,33 @@ header {
     overflow: hidden;
     width: 25vw;
     height: 25vw;
-    background: url(img/background.jpg) center / cover;
     text-align:center;
     z-index:98;
+    transition: all 100ms 0s ease;
+}
+#link1,#link6{
+    background: url(img/background.jpg) center / cover;
+}
+#link2,#link7{
+    background: url(img/nakanoicon.png) center / cover;
+}
+#link3{
+    background: url(img/umi.png) center / cover;
+}
+#link4{
+    background: url(img/aaa.jpg) center / cover;
+}
+#link5{
+    background: url(img/background.jpg) center / cover;
 }
 .scroll_item_inr {
     display: block;
 }
 .scroll_item:hover{
     outline: 10px solid #094a8c;
+}
+.black_text{
+    color:#333;
 }
 .scroll_item_ttl {
     font-size: 12px;
@@ -56,10 +70,10 @@ header {
     margin-bottom: 0;
 }
 .image{
-    width:64px;
-    height:64px;
-    padding-top:32px;
-    padding-left:32px;
+    width:62px;
+    height:62px;
+    padding-top:36px;
+    padding-left:36px;
 }
 a {
     text-decoration: none;
@@ -70,11 +84,41 @@ a {
     padding:32px;
     color:#094a8c;
 }
+#text_logo{
+    position:fixed;
+    right:32px;
+    padding:32px;
+    color:#333333;
+}
 footer{
     width:250px;
     position:fixed;
     left:calc(50% - 250px/2);
+    bottom:0;
+}
+.mainbun{
+    color:#094a8c;
+    padding-bottom:10vh;
+}
+.normal{
+    width:40vw;
+    height:auto;
 }
 @media all and (max-width: 700px) {
+    .image{
+        width:48px;
+        height:48px;
+        padding-top:24px;
+        padding-left:24px;
+    }
+    header{
+        height:80px;
+    }
+    .main{
+        padding-top:140px;
+    }
+    #text_logo{
+        display:none;
+    }
 }
 
