--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap');
+
 body{
     background-color: #f1f1f1;
     width:100%;
     height:100%;
-    font-family: sans-serif;
+    font-family: 'Noto Sans TC', sans-serif;
     margin:0;
     text-align: center;
 }
