--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     background-color: #f1f1f1;
     width:100%;
     height:100%;
-    font-family: 'Noto Sans TC', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     margin:0;
     text-align: center;
 }
