--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     text-align: center;
 }
 img#imagine{
-    position: fixed;
+    position: absolute;
     right: 0;
     bottom: 0;
     min-width: 100%;
