--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ img#imagine{
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     z-index: -100;
     background: url('poster.jpg') no-repeat;
     background-size: cover;
