--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ a {
     font-size:200%;
     position:fixed;
     left:32px;
-    color:#66a ;
+    color:#eeffff ;
 }
 #text_logo{
     position:fixed;
