2021年大幅アップデート

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header {
     background: url(img/aaa.jpg) center / cover;
 }
 #link5{
-    background: url(img/IMG_5390.jpeg) center / cover;
+    background: url(img/IMG_5390.jpg) center / cover;
 }
 .scroll_item_inr {
     display: block;
